Test Day12 part 2